--- a/slides/index.html
+++ b/slides/index.html
@@ -41,6 +41,13 @@
                                 <li>Intranet application development</li>
                             </ul>
                         </li>
+                        <li>Love the outdoors (camping/hiking/paddleboarding/kayaking)</li>
+                        <li>Passionate about craft beer! (should become obvious in a few minutes)</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>My Tech Stack</h2>
+                    <ul>
                         <li>Tools I Use:
                             <ul>
                                 <li>Adobe ColdFusion</li>
@@ -52,7 +59,6 @@
                             </ul>
                         </li>
                         <li style="padding-bottom: 1 em;">Adobe Community Professional for ColdFusion <em>(if I re-certified yesterday)</em></li>
-                        <li>Passionate about craft beer! (should become obvious in a few minutes)</li>
                     </ul>
                 </section>
                 <section>
